--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb://0.0.0.0:27017/mydatabase
+MONGO_URI=mongodb+srv://musaib:7Z%24R%23jFt5gB4Zy%21@dryfruits.wvndl.mongodb.net/DryFruits
