--- a/angular.json
+++ b/angular.json
@@ -73,7 +73,8 @@
               "browserTarget": "fruitsshop:build:production"
             },
             "development": {
-              "browserTarget": "fruitsshop:build:development"
+              "browserTarget": "fruitsshop:build:development",
+              "proxyConfig": "src/proxy.conf.json"
             }
           },
           "defaultConfiguration": "development"
